--- a/web/index.html
+++ b/web/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>Minimal Rust/WebGL Demo</title>
+    <title>sfb</title>
 </head>
 <body>
     <canvas id="canvas" width="640" height="480"></canvas>
